@@ -44,6 +44,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #24705: Fix sysconfig._parse_makefile not expanding ${} vars
+  appearing before $() vars.
+
 - Issue #22138: Fix mock.patch behavior when patching descriptors. Restore
   original values after patching. Patch contributed by Sean McCully.
 
